# rust-docdb

./: .gitignore  Cargo.toml  README.md
docs/: 001-simple-AND-optimisations.md  README.md
src/: docdb.rs  encoding.rs  lib.rs  main.rs  pathvalues.rs  query.rs  query_executor.rs  query_planner.rs
tests/: endtoend.rs  search.rs
