[package]
name = "rust_docdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
sled = "0.34"
rmp-serde = "1.1.2"

[dev-dependencies]
tempfile = "3.10.0"
rand = { version = "0.8.5", features = ["small_rng"] }
